<?xml version="1.0" encoding="utf-8"?>
<com.mxn.soul.flowingdrawer_core.FlowingDrawer xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    style="?attr/ar_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    app:edMenuSize="400dp"
    app:edPosition="1"
    tools:context=".ui.activity.home.HomeActivity">

    <include
        android:id="@+id/main_content_layout"
        layout="@layout/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--menu-->
    <com.mxn.soul.flowingdrawer_core.FlowingMenuLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="?attr/ar_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_icon_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15sp"
                android:contentDescription="@string/des"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/tv_app_name"
                style="?attr/ar_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18sp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toEndOf="@+id/img_icon_app"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                android:text="www.whatsDelete.com"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toEndOf="@+id/img_icon_app"
                app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />

            <TextView
                android:id="@+id/tv_access"
                style="?attr/ar_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="35sp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/quick_access"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_icon_app" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/menu_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:clipToPadding="false"
                android:paddingTop="18dp"
                android:paddingEnd="18dp"
                android:paddingStart="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_access" />

            <TextView
                android:id="@+id/tv_help"
                style="?attr/ar_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18sp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/help_link"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menu_recycler_view" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_config"
                style="?attr/ar_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_help">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="5dp"
                    android:padding="8dp"
                    android:text="@string/config"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center|end"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    android:contentDescription="@string/des" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_app_list"
                style="?attr/ar_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_config">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="5dp"
                    android:padding="8dp"
                    android:text="@string/app_list"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center|end"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:paddingEnd="10sp"
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    tools:ignore="RtlSymmetry"
                    android:contentDescription="@string/des" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_youtube"
                style="?attr/ar_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_app_list">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="5dp"
                    android:padding="8dp"
                    android:text="@string/youtube"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center|end"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:paddingEnd="10sp"
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    tools:ignore="RtlSymmetry"
                    android:contentDescription="@string/des" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.mxn.soul.flowingdrawer_core.FlowingMenuLayout>

</com.mxn.soul.flowingdrawer_core.FlowingDrawer>