<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.show.chat.ShowChatActivity">



<View
    android:id="@+id/cv_details_user_"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_50sdp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    style="?attr/mr_background_chat"


   />



    <androidx.cardview.widget.CardView
        android:id="@+id/cv_details_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_30sdp"
        app:cardCornerRadius="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_details_user_"


        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="@dimen/_5sdp"

            >

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/des"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="?attr/mr_chat_icon_background"

                />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sender_image_view"
                app:layout_constraintTop_toTopOf="parent"


                >

                <TextView
                    android:id="@+id/sender_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sender_demo"
                    android:textSize="@dimen/_15sdp"

                    android:textColor="@color/dark_grey"
                    android:fontFamily="@font/articulat_cf_bold"
                    />

            </HorizontalScrollView>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/sender_image_view"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:visibility="gone"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/des"
                app:layout_constraintStart_toEndOf="@+id/back_button"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>





    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/white"
        android:layout_marginTop="@dimen/_90sdp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/show_chat_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_50sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"



            />


    </androidx.cardview.widget.CardView>





    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_39sdp"
        android:layout_marginEnd="@dimen/_39sdp"
        android:layout_marginBottom="@dimen/_8sdp"

        android:backgroundTint="@color/grey_light"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_light"

            >

            <EditText
                android:id="@+id/chat_edit_text"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:padding="@dimen/_8sdp"
                android:autofillHints="@string/des"
                android:ems="10"
                android:hint="@string/chat_input_hint"
                android:inputType="text"
                android:background="@null"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/grey2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/chat_send_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <ImageButton
                android:id="@+id/chat_send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/des"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_send_24"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>